filling out intro

--- a/references.bib
+++ b/references.bib
@@ -23,3 +23,288 @@
   url = {https://www.R-project.org/},
 }
 
+@article{cabezas2024blackjax,
+  title={Black{JAX}: composable {B}ayesian inference in {JAX}},
+  author={Alberto Cabezas and Adrien Corenflos and Junpeng Lao and Rémi Louf and Antoine Carnec and Kaustubh Chaudhari and Reuben Cohn-Gordon and Jeremie Coullon and Wei Deng and Sam Duffield and Gerardo Durán-Martín and Marcin Elantkowski and Dan Foreman-Mackey and Michele Gregori and Carlos Iguaran and Ravin Kumar and Martin Lysy and Kevin Murphy and Juan Camilo Orduz and Karm Patel and Xi Wang and Rob Zinkov},
+  journal={arXiv},
+  volume={2402.10797},
+  year={2024}
+}
+
+@article{carpenter2015ad,
+  title={The {S}tan math library: Reverse-mode automatic differentiation in {C++}},
+  author={Carpenter, Bob and Hoffman, Matthew D and Brubaker, Marcus and Lee, Daniel and Li, Peter and Betancourt, Michael},
+  journal={arXiv},
+  volume={1509.07164},
+  year={2015}
+}
+
+@article{carpenter2017stan,
+  title={Stan: A probabilistic programming language},
+  author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+  journal={Journal of Statistical Software},
+  volume={76},
+  pages={1--32},
+  year={2017}
+}
+
+@article{de2017programming,
+  title={Programming with models: writing statistical algorithms for general model structures with {NIMBLE}},
+  author={de Valpine, Perry and Turek, Daniel and Paciorek, Christopher J and Anderson-Bergman, Clifford and Lang, Duncan Temple and Bodik, Rastislav},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={26},
+  number={2},
+  pages={403--413},
+  year={2017}
+}
+
+@incollection{doucet2001introduction,
+  title={An introduction to sequential {M}onte {C}arlo methods},
+  author={Doucet, Arnaud and De Freitas, Nando and Gordon, Neil},
+  booktitle={Sequential Monte Carlo methods in practice},
+  pages={3--14},
+  year={2001},
+  publisher={Springer}
+}
+
+@article{fjelde2025turing,
+  title={Turing.jl: a general-purpose probabilistic programming language},
+  author={Fjelde, Tor Erlend and Xu, Kai and Widmann, David and Tarek, Mohamed and Pfiffer, Cameron and Trapp, Martin and Axen, Seth D and Sun, Xianda and Hauru, Markus and Yong, Penelope and others},
+  year={2025},
+  journal={ACM Transactions on Probabilistic Machine Learning},
+}
+
+@inproceedings{ge2018turing,
+  title={Turing: a language for flexible probabilistic inference},
+  author={Ge, Hong and Xu, Kai and Ghahramani, Zoubin},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={1682--1690},
+  year={2018}
+}
+
+@book{gelman2013bda,
+  title={Bayesian Data Analysis},
+  edition={Third},
+  author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki},
+  year={2013},
+  publisher={Chapman and Hall/CRC}
+}
+
+@article{gelman2020workflow,
+  title={Bayesian workflow},
+  author={Gelman, Andrew and Vehtari, Aki and Simpson, Daniel and Margossian, Charles C and Carpenter, Bob and Yao, Yuling and Kennedy, Lauren and Gabry, Jonah and B{\"u}rkner, Paul-Christian and Modr{\'a}k, Martin},
+  journal={arXiv},
+  volume={2011.01808},
+  year={2020}
+}
+
+@article{guennebaud2010eigen,
+  title={{Eigen: A {C++} linear algebra library}},
+  author={Guennebaud, Ga{\"e}l and Jacob, Beno{\^i}t},
+  journal={Eurographics/CGLibs},
+  year={2010},
+  note={\url{http://eigen.tuxfamily.org}}
+}
+
+@article{hastings1970monte,
+  title={Monte {C}arlo sampling methods using {M}arkov chains and their applications},
+  author={Hastings, W. K.},
+  journal={Biometrika},
+  volume={57},
+  pages={97--109},
+  year={1970}
+}
+
+@article{hoffman2014no,
+  title={The no-{U}-turn sampler: adaptively setting path lengths in {H}amiltonian {M}onte {C}arlo},
+  author={Hoffman, Matthew D and Gelman, Andrew},
+  journal={Journal of Machine Learning Research},
+  volume={15},
+  number={1},
+  pages={1593--1623},
+  year={2014}
+}
+
+@article{horowitz1991generalized,
+  title={A generalized guided {M}onte {C}arlo algorithm},
+  author={Horowitz, Alan M},
+  journal={Physics Letters B},
+  volume={268},
+  number={2},
+  pages={247--252},
+  year={1991}
+}
+
+@book{josuttis2012cpp,
+  title={The {C}++ Standard Library: A Tutorial and Reference},
+  author={Josuttis, Nicolai M},
+  year={2012},
+  publisher={Addison-Wesley}
+}
+
+@article{kucukelbir2017automatic,
+  title={Automatic differentiation variational inference},
+  author={Kucukelbir, Alp and Tran, Dustin and Ranganath, Rajesh and Gelman, Andrew and Blei, David M},
+  journal={Journal of Machine Learning Research},
+  volume={18},
+  number={14},
+  pages={1--45},
+  year={2017}
+}
+
+@article{kumar2019arviz,
+  title={Arvi{Z} a unified library for exploratory analysis of {B}ayesian models in {P}ython},
+  author={Kumar, Ravin and Carroll, Colin and Hartikainen, Ari and Martin, Osvaldo},
+  journal={Journal of Open Source Software},
+  volume={4},
+  number={33},
+  pages={1143},
+  year={2019}
+}
+
+@article{lunn2009bugs,
+  title={The {BUGS} project: Evolution, critique and future directions},
+  author={Lunn, David and Spiegelhalter, David and Thomas, Andrew and Best, Nicky},
+  journal={Statistics in Medicine},
+  volume={28},
+  number={25},
+  pages={3049--3067},
+  year={2009}
+}
+
+@book{lunn2012bugs,
+  title={The {BUGS} Book: A Practical Introduction to {B}ayesian Analysis},
+  author={Lunn, David and Jackson, Chris and Best, Nicky and Thomas, Andrew and Spiegelhalter, David},
+  year={2012},
+  publisher={CRC Press}
+}
+
+@article{margossian2023general,
+  title={General adjoint-differentiated {L}aplace approximation},
+  author={Margossian, Charles C},
+  journal={arXiv},
+  volume={2306.14976},
+  year={2023}
+}
+
+@misc{maskell2024jaxgpu,
+  author = {Maskell, Simon},
+  title = {Running Multiple Short {MCMC} Chains on a {GPU} Using {JAX} for Fast Inference with {S}tan},
+  year = {2024},
+  howpublished = {YouTube! video},
+  note = {StanCon 2024, Oxford},
+  location = {StanCon Oxford},
+  url = {https://www.youtube.com/watch?v=KpLZEYX8MpY},
+  urldate = {2025-01-26}
+}
+
+@inproceedings{murray2010elliptical,
+  title={Elliptical slice sampling},
+  author={Murray, Iain and Adams, Ryan and MacKay, David},
+  booktitle={Proceedings of the 13th International Conference on Artificial Intelligence and Statistics},
+  pages={541--548},
+  year={2010}
+}
+
+@article{phan2019composable,
+  title={Composable effects for flexible and accelerated probabilistic programming in {N}um{P}yro},
+  author={Phan, Du and Pradhan, Neeraj and Jankowiak, Martin},
+  journal={arXiv},
+  volume={1912.11554},
+  year={2019}
+}
+
+@inproceedings{plummer2003jags,
+  title={{JAGS}: A program for analysis of {B}ayesian graphical models using {G}ibbs sampling},
+  author={Plummer, Martyn},
+  booktitle={Proceedings of the 3rd International Workshop on Distributed Statistical Computing},
+  volume={124},
+  number={125.10},
+  pages={1--10},
+  year={2003},
+  location={Vienna, Austria}
+}
+
+@article{roberts2004mcmc,
+  title={General state space {M}arkov chains and {MCMC} algorithms},
+  author={Roberts, Gareth O and Rosenthal, Jeffrey S},
+  journal={Probability Surveys},
+  volume={1},
+  pages={20--71},
+  year={2004}
+}
+
+@article{robnik2025metropolis,
+  title={Metropolis Adjusted Microcanonical {H}amiltonian {M}onte {C}arlo},
+  author={Robnik, Jakob and Cohn-Gordon, Reuben and Seljak, Uro{\v{s}}},
+  journal={arXiv},
+  volume={2503.01707},
+  year={2025}
+}
+
+@article{roualdes2023bridgestan,
+  title={BridgeStan: Efficient in-memory access to the methods of a {S}tan model},
+  author={Roualdes, Edward A and Ward, Brian and Carpenter, Bob and Seyboldt, Adrian and Axen, Seth D},
+  journal={Journal of Open Source Software},
+  volume={8},
+  number={87},
+  pages={5236},
+  year={2023}
+}
+
+@article{salvatier2016probabilistic,
+  title={Probabilistic programming in {P}ython using {P}y{MC3}},
+  author={Salvatier, John and Wiecki, Thomas V and Fonnesbeck, Christopher},
+  journal={PeerJ Computer Science},
+  volume={2},
+  pages={e55},
+  year={2016}
+}
+
+@article{sountsov2024running,
+  title={Running {M}arkov chain {M}onte {C}arlo on modern hardware and software},
+  author={Sountsov, Pavel and Carroll, Colin and Hoffman, Matthew D},
+  journal={arXiv},
+  volume={2411.04260},
+  year={2024}
+}
+
+@manual{stan2025ref, 
+  title        = {Stan Reference Manual},
+  author       = {{Stan Development Team}},
+  year         = {2025},
+  version      = {2.38},
+  organization = {Stan Project},
+  url          = {https://mc-stan.org/docs/reference-manual/},
+  urldate      = {2026-01-26}
+}
+
+@article{vehtari2017practical,
+  title={Practical {B}ayesian model evaluation using leave-one-out cross-validation and {WAIC}},
+  author={Vehtari, Aki and Gelman, Andrew and Gabry, Jonah},
+  journal={Statistics and Computing},
+  volume={27},
+  number={5},
+  pages={1413--1432},
+  year={2017}
+}
+
+@article{vehtari2021rank,
+  title={Rank-normalization, folding, and localization: An improved {R}-hat for assessing convergence of {MCMC} (with discussion)},
+  author={Vehtari, Aki and Gelman, Andrew and Simpson, Daniel and Carpenter, Bob and B{\"u}rkner, Paul-Christian},
+  journal={Bayesian Analysis},
+  volume={16},
+  number={2},
+  pages={667--718},
+  year={2021}
+}
+
+@article{zhang2022pathfinder,
+  title={Pathfinder: Parallel quasi-{N}ewton variational inference},
+  author={Zhang, Lu and Carpenter, Bob and Gelman, Andrew and Vehtari, Aki},
+  journal={Journal of Machine Learning Research},
+  volume={23},
+  number={306},
+  pages={1--49},
+  year={2022}
+}
