--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,16 @@
   url = {https://www.R-project.org/},
 }
 
+@article{blondel2021jaxopt,
+  title={Efficient and Modular Implicit Differentiation},
+  author={Blondel, Mathieu and Berthet, Quentin and Cuturi, Marco and Frostig, Roy
+   and Hoyer, Stephan and Llinares-L{\'o}pez, Felipe and Pedregosa, Fabian
+   and Vert, Jean-Philippe},
+  journal={arXiv},
+  volume={2105.15183},
+  year={2021}
+}
+
 @article{cabezas2024blackjax,
   title={Black{JAX}: composable {B}ayesian inference in {JAX}},
   author={Alberto Cabezas and Adrien Corenflos and Junpeng Lao and Rémi Louf and Antoine Carnec and Kaustubh Chaudhari and Reuben Cohn-Gordon and Jeremie Coullon and Wei Deng and Sam Duffield and Gerardo Durán-Martín and Marcin Elantkowski and Dan Foreman-Mackey and Michele Gregori and Carlos Iguaran and Ravin Kumar and Martin Lysy and Kevin Murphy and Juan Camilo Orduz and Karm Patel and Xi Wang and Rob Zinkov},
@@ -58,6 +68,21 @@
   year={2017}
 }
 
+@software{deepmind2020jax,
+  title = {The {D}eep{M}ind {JAX} {E}cosystem},
+  author = {DeepMind and Babuschkin, Igor and Baumli, Kate and Bell, Alison and Bhupatiraju, Surya and Bruce, Jake and Buchlovsky, Peter and Budden, David and Cai, Trevor and Clark, Aidan and Danihelka, Ivo and Dedieu, Antoine and Fantacci, Claudio and Godwin, Jonathan and Jones, Chris and Hemsley, Ross and Hennigan, Tom and Hessel, Matteo and Hou, Shaobo and Kapturowski, Steven and Keck, Thomas and Kemaev, Iurii and King, Michael and Kunesch, Markus and Martens, Lena and Merzic, Hamza and Mikulik, Vladimir and Norman, Tamara and Papamakarios, George and Quan, John and Ring, Roman and Ruiz, Francisco and Sanchez, Alvaro and Sartran, Laurent and Schneider, Rosalia and Sezener, Eren and Spencer, Stephen and Srinivasan, Srivatsan and Stanojevi\'{c}, Milo\v{s} and Stokowiec, Wojciech and Wang, Luyu and Zhou, Guangyao and Viola, Fabio},
+  url = {http://github.com/deepmind},
+  year = {2020},
+}
+
+@article{dillon2017tensorflow,
+  title={Tensorflow distributions},
+  author={Dillon, Joshua V and Langmore, Ian and Tran, Dustin and Brevdo, Eugene and Vasudevan, Srinivas and Moore, Dave and Patton, Brian and Alemi, Alex and Hoffman, Matt and Saurous, Rif A},
+  journal={arXiv},
+  volume={1711.10604},
+  year={2017}
+}
+
 @incollection{doucet2001introduction,
   title={An introduction to sequential {M}onte {C}arlo methods},
   author={Doucet, Arnaud and De Freitas, Nando and Gordon, Neil},
@@ -72,6 +97,16 @@
   author={Fjelde, Tor Erlend and Xu, Kai and Widmann, David and Tarek, Mohamed and Pfiffer, Cameron and Trapp, Martin and Axen, Seth D and Sun, Xianda and Hauru, Markus and Yong, Penelope and others},
   year={2025},
   journal={ACM Transactions on Probabilistic Machine Learning},
+}
+
+@article{gabry2019visualization,
+  title={Visualization in {B}ayesian workflow},
+  author={Gabry, Jonah and Simpson, Daniel and Vehtari, Aki and Betancourt, Michael and Gelman, Andrew},
+  journal={Journal of the Royal Statistical Society Series A: Statistics in Society},
+  volume={182},
+  number={2},
+  pages={389--402},
+  year={2019}
 }
 
 @inproceedings{ge2018turing,
@@ -96,6 +131,16 @@
   journal={arXiv},
   volume={2011.01808},
   year={2020}
+}
+
+@article{gorinova2019slic,
+  title={Probabilistic programming with densities in {SlicStan}: efficient, flexible, and deterministic},
+  author={Gorinova, Maria I and Gordon, Andrew D and Sutton, Charles},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={3},
+  number={POPL},
+  pages={1--30},
+  year={2019}
 }
 
 @article{guennebaud2010eigen,
@@ -142,6 +187,13 @@
   publisher={Addison-Wesley}
 }
 
+@phdthesis{kidger2021on,
+    title={On neural differential equations},
+    author={Patrick Kidger},
+    year={2021},
+    school={University of Oxford},
+}
+
 @article{kucukelbir2017automatic,
   title={Automatic differentiation variational inference},
   author={Kucukelbir, Alp and Tran, Dustin and Ranganath, Rajesh and Gelman, Andrew and Blei, David M},
@@ -177,6 +229,14 @@
   author={Lunn, David and Jackson, Chris and Best, Nicky and Thomas, Andrew and Spiegelhalter, David},
   year={2012},
   publisher={CRC Press}
+}
+
+@article{margossian2021implicit,
+  title={Efficient automatic differentiation of implicit functions},
+  author={Margossian, Charles C and Betancourt, Michael},
+  journal={arXiv},
+  volume={2112.14217},
+  year={2021}
 }
 
 @article{margossian2023general,
@@ -277,6 +337,24 @@
   organization = {Stan Project},
   url          = {https://mc-stan.org/docs/reference-manual/},
   urldate      = {2026-01-26}
+}
+
+@article{talts2018validating,
+  title={Validating {B}ayesian inference algorithms with simulation-based calibration},
+  author={Talts, Sean and Betancourt, Michael and Simpson, Daniel and Vehtari, Aki and Gelman, Andrew},
+  journal={arXiv},
+  volume={1804.06788},
+  year={2018}
+}
+
+@article{vehtari2017practical,
+  title={Practical {B}ayesian model evaluation using leave-one-out cross-validation and {WAIC}},
+  author={Vehtari, Aki and Gelman, Andrew and Gabry, Jonah},
+  journal={Statistics and Computing},
+  volume={27},
+  number={5},
+  pages={1413--1432},
+  year={2017}
 }
 
 @article{vehtari2017practical,
