--- a/template-computo-python.qmd
+++ b/template-computo-python.qmd
@@ -2,26 +2,26 @@
 
 ## Bayesian workflow
 
-@gelman2013bda begin their textbook by laying out the three steps of Bayesian data analysis:
+@gelman2013bda begin their foundational textbook by laying out the three steps of Bayesian data analysis:
 
 1. Design a joint probabilty distribution for observable data and unobservable parameters.
-2. Perform inference to generate a posterior over parameters conditioned on data and compute expectations for quantities of interest.
+2. Perform inference to generate a posterior sample over parameters conditioned on data and compute expectations for quantities of interest.
 3.  Evaluate the model fit and what it tells us about our quantities of interest.
 
 If the evaluation in (3) is not sufficient, then go back to (1) and try to come up with a better model.  More recently, @gelman2020workflow outlined a workflow for Bayesian analysis that puts more emphasis on evaluating multiple models simultaneously and transparently reporting their exploration and comparison.
 
-A probabilistic programming language (PPL) primarily provides support for task (1), and is often integrated into an environment that provides support for task (2), and some rudimentary tools for task (3).  In this paper, we are going to focus on the job the PPL is doing toward (1).  That is, we will assume the goal is to implement efficient and scalable differentiable Bayesian models in a way that is both easy to code and easy to read.  
+A probabilistic programming language (PPL) primarily provides support for task (1), and is often integrated into an environment that provides support for task (2), and some rudimentary tools for task (3).  In this paper, we are going to focus on the job the PPL is doing toward (1), while providing guidance for steps (2) and (3).  The goal is a methodology for implementing efficient and scalable differentiable Bayesian models in Python in a way that is both easy to code and easy to read.  
 
-For step (2), we recommend the Python package Blackjax [@cabezas2024blackjax]. Blackjax includes implementations of Stan's primary inference methods, NUTS, ADVI, and Pathfinder.  It is being maintained and extended, and already includes several other useful algorithms, including isokinetic (aka microcanonical) sampling [@robnik2025metropolis], sequential Monte Carlo [@doucet2001introduction], elliptical slice sampling [@murray2010elliptical], generalized HMC [@horowitz1991generalized], and even random-walk Metropolis [@hastings1970monte].
+For step (2), we recommend the Python package Blackjax [@cabezas2024blackjax]. Blackjax includes implementations of Stan's primary inference methods, NUTS, ADVI, and Pathfinder.  It is being actively maintained and extended, and already includes several other useful algorithms, including isokinetic (aka microcanonical) sampling [@robnik2025metropolis], sequential Monte Carlo [@doucet2001introduction], elliptical slice sampling [@murray2010elliptical], generalized HMC [@horowitz1991generalized], and even random-walk Metropolis [@hastings1970monte].
 
-For step (3), we recommend the Python package Arviz [@kumar2019arviz].  Arviz provides state-of-the-art convergence monitoring as well as estimation of effective sample size and standard errors, as well as the usual posterior means, standard deviations, and quantiles [@vehtari2021rank].
+For step (3), we recommend the Python package Arviz [@kumar2019arviz].  Arviz provides state-of-the-art convergence monitoring as well as estimation of effective sample size and standard errors, as well as the usual posterior means, standard deviations, and quantiles [@vehtari2021rank], as well as approximate leave-one-out cross-validation [@vehtari2017practical].
 
 ## Why not just use Stan?
 
-Stan [@carpenter2017stan] is a domain-specific language for expressing differentiable probability densities and posterior predictive quantities.  Stan is a probabilistic programming language in the sense that its variables can be interpreted as random variables.  Stan has been used in almost every area where statistics is applied, and as such, has accumulated a wide variety of training materials around different classes of probabilistic models.  There are textbooks, college classes, and reproducible case studies in all of these areas.  There's a vibrant community with a very active Discourse.  The language is still being expanded and so is it's math library.
+Stan [@carpenter2017stan] is a domain-specific language for expressing differentiable probability densities and posterior predictive quantities.  Stan is a probabilistic programming language in the sense that its variables can be interpreted as random variables.  Stan has been used in almost every area where statistics is applied, and as such, has accumulated an unmatched depth and breadth of training materials around different classes of probabilistic models.  There are textbooks, college classes, and reproducible case studies in all of these areas.  There's a vibrant community with a very active Discourse.  The language is still being expanded and so is it's math library.
 
-The Stan project introduced several state of the art gradient-based inference algorithms including the no-U-turn sampler (NUTS) [@hoffman2014no], automatic differentiation variational inference (ADVI) [@kucukelbir2017automatic], Pathfinder variational inference [@zhang2022pathfinder], and black-box nested Laplace approximations [@margossian2023general].  
-
+The Stan project introduced several state of the art gradient-based inference algorithms including the no-U-turn sampler (NUTS) [@hoffman2014no], automatic differentiation variational inference (ADVI) [@kucukelbir2017automatic], Pathfinder variational inference [@zhang2022pathfinder], and black-box nested Laplace approximations [@margossian2023general] as well as posterior analysis tools such as split- and ranked-$\widehat{R}$ and corresponding bulk and tail effective sample size [@vehtari2021rank], leave-one-out cross-validation [@vehtari2017practical], refined simulation-based calibration checks [@talts2018validating], and prior predictive checks [@gabry2019visualization].  It is often used as the basis of methodological developments such as Bayesian workflow [@gelman2020workflow].
+ 
 So why not just use Stan? The first reason is that Stan is largely CPU-bound.  All of its analysis tools and algorithms run on the CPU.  Although there are ways to call individual functions in a Stan program on the GPU (e.g., Cholesky decomposition) and ways to apply map-reduce across multiple cores, this is not enough.  Stan lacks a way to keep computation in-kernel on the GPU or organize inference to enable single-instruction multiple-data (SIMD) parallelism.  As a result, Stan is not competitive on modern hardware [@sountsov2024running; @maskell2024jaxgpu].
 
 The second obstacle to using Stan is the need to learn a second language. While Stan is not particularly complicated, it does present several difficulties. For example, Stan is indexed from 1, like a lot of mathematics and linear algebra, whereas Python is indexed from 0, like most programming languages.  Translating between 0-based and 1-based indexing is tedious, error-prone, and obfuscates code. Further, Stan is strongly typed and statically compiled, which is safe and leads to fast C++ computation, but this style of coding is unfamiliar to most applied users and does not integrate at all with Python's development environments.  Stan's typing can be an annoyance even for experienced users due to its poor representational choice for containers that mixes C++ standard vectors [@josuttis2012cpp] for arrays and Eigen matrices [@guennebaud2010eigen] for linear algebra. The problem of a second language is further exacerbated by the relative lack of tooling around Stan development (e.g., some simple autocomplete and syntax highlighting plus debug by compile and printf) compared to Python development, which provides well supported integrated development environments.  Finally, while there is a great deal of tutorial and onboarding material around Stan, it not only feels like duplicated effort, it is dwarfed by the tutorial material around statistical computing in Python.
@@ -38,6 +38,37 @@ Like Stan, they efficiently scale in dimension by using gradient-based inference
 When models get more complicated in terms of novel constraints, densities, conditional structures, etc., both PyMC and NumPyro provide escape hatches to let you define transformations and log densities directly in the same way as Stan. This is great for generality, but it blocks the use of graphical model tooling. At this point, we believe it is simpler to just code the models directly in JAX rather than working around the graphical modeling paradigm of PyMC or NumPyro.
 
 A second reason to prefer the approach we are presenting here is that it is much more direct.  By that, we mean that like Stan, the resulting code is implemented transparently in an imperative fashion rather than indirectly through the structure of the directed acyclic graph.  This also makes it straightforward to directly inject calls to JAX in the code.
+
+## Special function support
+
+Stan has an extensive library of special mathematical and statistical and reshaping functions.  Many of these are needed to differentiate cumulative distribution functions and to define custom densities.  Here's a brief overview of the coverage available in JAX compared to Stan.  Much of the special function support in JAX comes through its reiplementation of the SciPy ([`jax.scipy`](https://docs.jax.dev/en/latest/jax.scipy.html)) and NumPy ([`jax.numpy`](https://docs.jax.dev/en/latest/jax.numpy.html) libraries.
+
+* *Matrix library*:  This is JAX's main focus and it far exceeds Stan's collection of familiar matrix functions and reshaping tools by punning NumPy (`jax.numpy`) and SciPy (`jax.scipy`).  There is even limited (and experimental) support for sparse matrices and solvers natively ([`jax.experimental.sparse`](https://docs.jax.dev/en/latest/jax.experimental.sparse.html)).
+
+* *Special functions*:  These are available all over the JAX modle structure, including in JAX's NumPy and SciPy modules.  The differentiable SciPy module is not complete compared to SciPy.  The deficit is more than made up by the special function library provided by TFP ([`jax.scipy.special`](https://docs.jax.dev/en/latest/jax.scipy.html#module-jax.scipy.special)) and maintained by Google.  For example, the Lambert W function available in Stan has not been ported from SciPy but is available through TFP.  The bottom line is that JAX provides a *better* selection of well supported special functions.
+
+* *Probability distributions*:  Stan implements dozens of probability distributions, including almost most (but not all) of the ones in common use for statistical models.  While the basics are available through JAX's NumPy and SciPy modules (often redundantly), the go-to library is TensorFlow Probability (TFP) ([`tfp.probability`](https://www.tensorflow.org/probability?hl=en)) for probability distributions (density functions, mass functions, and distribution functions).  In some cases, there are also quantile functions, which are poorly supported in Stan.  The bottom line is that the *JAX* ecoysystem provides a *etter* selection of well supported probability functions and random number generators.  There is even wider support beyond native JAX and TesnorFlow, including the probabilistic programming language NumPyro [@phan2019composable] and Google DeepMind's library Distrax [@deepmind2020jax].  Overall, there is *better* support for probability distributions in JAX than in Stan.
+
+* *Implicit Solvers*:  Applied statistics often requires equations to be solved and differentiated and Stan provides a fairly extensive library.
+    * *ODE solvers*: There is no built-in support in JAX for ODE solvers, but the Diffrax library [@kidger2021on] is widely used and provides the same kind of adjoint and analytic methods as Stan that provide sensitivity analysis without automatically differentiating through the algorithm.  
+    * *Root finders*:  There is no built-in support in JAX for root finders, but the JAXOpt package [@blondel2021jaxopt] is maintained by Google and provides a range of solversincluding the Newton method used by Stan.
+    * *1D Integration*: There is no built-in or widely used external support for 1D integration in JAX at the moment.
+    * *Hidden Markov models*:  TFP (through [`tfp.distributions.HiddenMarkovModel`](https://www.tensorflow.org/probability/api_docs/python/tfp/distributions/HiddenMarkovModel?hl=en)) provides support for the forward algorithm to compute the distribution of outcomes given parameters (i.e., implement a likelihood function). This is enough to fit models out of the box, but it is not as efficient as the full forward-backward algorithm.
+    * *Kalman filters*:  There is no direct support in Stan; there is experimental support in TFP (in [`tfp.experimental.parallel_filter.kalman_filter`](https://www.tensorflow.org/probability/api_docs/python/tfp/experimental/parallel_filter/kalman_filter?hl=en)).
+
+Although algorithms are implemented in JAX for things like ODE solving, that does not necessarily means they have been implemented in a way that scales out to multiple cores or makes efficient use of GPU parallelism.  On the other hand, overall, the special function and probability distribution and transform libraries of JAX are much more extensive than those supplied by Stan.
+
+## Constrained parameter support
+
+Stan provides built-in transforms for constrained parameters to provide densities with support over all of $\mathbb{R}^D$.  These are custom implementations with analytic Jacobian-adjoint product gradients in Stan plus efficient vectorized change-of-variables Jacobian-determinant calculations, so they are efficient.
+
+The Oryx transform library in TensorFlow is built on top of the TFP bijector library ([`tfp.bijectors`](https://www.tensorflow.org/probability/api_docs/python/tfp/bijectors)) [@dillon2017tensorflow], which can also be used directly.  TFP bijectors provide all of the transforms provided by Stan and many more including softplus, various cdfs and hyperbolic tangent as replacements for inverse-logit, more multivariate transforms such as cumulative sums and Householder factorizations, as well as trained transforms like RealNVP normalizing flows.  Oryx additionally allows transforms to be written down directly in such a way that Oryx can automatically calculate inverse transforms and Jacobian determinants of inverse transforms.
+
+## Modularity
+
+SlicStan [@gorinova2019slic] reconceived Stan without blocks---the sorting into data, parameters, and generated quantities was carried out by data flow analysis.  The primary motivation was to make it possible to modularly express concepts like a hierarchical prior.  With Stan itself, this is impossible unless the modularity is in the form of a simple function.  With SlicStan, the parameters, priors, etc., could all be constructed modularly and reused.  By allowing models to be expressed direclty in Python code, NumPyro and PyMC already support modular code reuse.  Although it is rare to see this feature used in example code, it is widely used in production.
+
+By coding models directly in Python, we gain the same benefits of NumPyro and PyMC.  We can just write programs to construct and combine objects of interest for us, such as constrained variables and log density contributions.
 
 
 # A linear regression case study
@@ -60,11 +91,15 @@ y_n \sim \textrm{normal}(\alpha + x_n \cdot \beta, \sigma).
 $$
 The joint density defining our Bayesian model (with data $x$ taken as an unmodeled constant) is thus
 $$\textstyle
+\begin{array}{rcl}
 p(y, \alpha, \beta, \sigma \mid x)
-= \textrm{exponential}(\sigma \mid 0.5)
+& = &
+  \textrm{exponential}(\sigma \mid 0.5)
   \cdot \textrm{normal}(\alpha \mid 0, 5)
-  \cdot \left( \prod_{p=1}^P \textrm{normal}(\beta_p \mid 0, 2.5) \right)
+\\[4pt]
+& & {} \cdot \left( \prod_{p=1}^P \textrm{normal}(\beta_p \mid 0, 2.5) \right)
   \cdot \left( \prod_{n=1}^N \textrm{normal}(y_n \mid \alpha + x_n \cdot \beta, \sigma) \right).
+\end{array}
 $$
 Bayes's rule simply tells us that we can use the joint density as an unnormalized posterior,
 $$
